@@ -47,7 +47,7 @@ public class BouncyCastlePQCProvider
      */
     public BouncyCastlePQCProvider()
     {
-        super(PROVIDER_NAME, 1.62, info);
+        super(PROVIDER_NAME, Double.toString(1.62), info);
 
         AccessController.doPrivileged(new PrivilegedAction()
         {
@@ -74,7 +74,7 @@ public class BouncyCastlePQCProvider
             {
                 try
                 {
-                    ((AlgorithmProvider)clazz.newInstance()).configure(this);
+                    ((AlgorithmProvider)clazz.getDeclaredConstructor().newInstance()).configure(this);
                 }
                 catch (Exception e)
                 {   // this should never ever happen!!
